--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -1,6 +1,11 @@
 name: Greet Everyone
 # This workflow is triggered on pushes to the repository.
-on: [push, pull_request]
+on:
+  push:
+  pull_request:
+  issue_comment:
+    types: [created]
+
 
 jobs:
   build:
