--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -28,6 +28,7 @@ jobs:
       #
       - name: fail
         run: cd xx
+        continue-on-error: true
 
       - name: only on fail
         if: failure()
