--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -40,7 +40,44 @@ jobs:
           echo "Success!"
 
       - name: Notify slack when it not run
+        id: step2
         if: steps.step1.outputs.status != 'success'
+        continue-on-error: true
+        run: |
+          echo "Something went wrong!"
+          cd xx
+
+#
+      - name: Notify slack when success
+        if: steps.step2.outputs.status == 'success'
+        run: |
+          echo "Success!"
+
+      - name: Notify slack when it not run
+        id: step3
+        if: steps.step2.outputs.status != 'success'
+        continue-on-error: true
+        run: |
+          echo "Something went wrong!"
+          cd xx
+
+#
+      - name: Notify slack when success
+        if: steps.step3.outputs.status == 'success'
+        run: |
+          echo "Success!"
+
+      - name: Notify slack when it not run
+        id: step4
+        if: steps.step3.outputs.status != 'success'
+        continue-on-error: true
+        run: |
+          echo "Something went wrong!"
+          cd xx
+
+#
+      - name: Notify slack when it not run
+        if: steps.step4.outputs.status != 'success'
         run: |
           echo "Something went wrong!"
           cd xx
