--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -41,7 +41,9 @@ jobs:
         continue-on-error: true
         run: |
           echo "Something went wrong!"
+          echo ::set-output name=status::failure
           cd xx
+          echo ::set-output name=status::success
 
 #
 
@@ -51,19 +53,13 @@ jobs:
         continue-on-error: true
         run: |
           echo "Something went wrong!"
+          echo ::set-output name=status::failure
           cd xx
+          echo ::set-output name=status::success
 
 #
       - name: Rerun 3
-        id: step4
         if: steps.step3.outputs.status != 'success'
-        continue-on-error: true
         run: |
           echo "Something went right!"
 
-#
-      - name: Stop on error
-        if: steps.step4.outputs.status != 'success'
-        run: |
-          echo "Something went wrong!"
-          exit -1
