--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -42,6 +42,7 @@ jobs:
         run: |
           echo "Something went wrong!"
           echo ::set-output name=status::failure
+          cd xx
           echo ::set-output name=status::success
 
 #
@@ -60,5 +61,7 @@ jobs:
       - name: Rerun 3
         if: steps.step1.outputs.status != 'success' && steps.step2.outputs.status != 'success' && steps.step-3.outputs.status != 'success'
         run: |
-          echo "Something went right!"
+          echo ::set-output name=status::failure
+          cd xx
+          echo ::set-output name=status::success
 
